// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterText カウントが10以上のときのテキストが表示されているCounterTextを描画できる 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "width": 100,
    }
  }
>
  <Text>
    you're great!
  </Text>
  <Text
    style={
      {
        "fontSize": 20,
      }
    }
  >
    10
  </Text>
</View>
`;

exports[`CounterText 通常のcounterTextを描画できる 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "width": 100,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 20,
      }
    }
  >
    0
  </Text>
</View>
`;
